# mrbig

./: .Cargo.data.yaml  .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile.toml  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: rust.yml
grpc_reflection/: .Cargo.template.toml  Cargo.toml  README.md  build.rs
grpc_reflection/src/: info_handler.rs  lib.rs  proto_includes.rs
grpc_reflection_build/: .Cargo.template.toml  Cargo.toml  README.md
grpc_reflection_build/src/: compile.rs  lazy.rs  lib.rs  symbol_map.rs
mrbig_book/: README.md
mrbig_book/contents/: SUMMARY.md  appendix.md  foreword.md
mrbig_build/: .Cargo.template.toml  Cargo.toml  README.md
mrbig_build/src/: lib.rs  protos.rs
mrbig_cli/: Cargo.toml
mrbig_cli/src/: errors.rs  lib.rs  macros.rs  main.rs  scaffold.rs  settings.rs  shell.rs
mrbig_cli/src/commands/: hatch.rs  login.rs  mod.rs  scaffold.rs  setup.rs
mrbig_cli/src/templates/helloworld/: .Cargo.template.toml  Cargo.toml  build.rs
mrbig_cli/src/templates/helloworld/src/: main.rs
mrbig_cli/src/utilities/: cargo.rs  docker.rs  emojis.rs  git.rs  installer.rs.old  mod.rs
mrbig_core/: .Cargo.template.toml  Cargo.toml  README.md
mrbig_core/src/: config.rs  context.rs  error.rs  lib.rs  metrics.rs
mrbig_derive/: .Cargo.template.toml  Cargo.toml  README.md
mrbig_derive/src/: configurable.rs  grpc.rs  mod.rs  run.rs  service.rs
mrbig_examples/hotel/: .Cargo.template.toml  Cargo.toml  build.rs
mrbig_examples/hotel/src/: client.rs  main.rs
mrbig_hatch/: Cargo.toml  README.md
mrbig_hatch/benches/: sample.rs
mrbig_hatch/src/: errors.rs  lib.rs  main.rs
mrbig_hatch/src/server/: mod.rs
mrbig_rfcs/: README.md  book.toml
mrbig_rfcs/text/: 0001-template.md  0002-configuration.md  0003-grpc-reflection.md  0004-context.md  0005-grpc-health-check.md  0006-tracing.md  0007-telemetry.md
scripts/: bump_versions  generate_manifests
tests/: run_tests
tests/codegen/: .Cargo.template.toml  Cargo.toml  build.rs  test.sh
tests/codegen/src/: greeter_client.rs  greeter_server_head.rs  test_codegen_greeter.rs  test_codegen_greeter_config.rs  test_codegen_greeter_extra.rs  test_codegen_register.rs
tests/grpc/: .Cargo.template.toml  Cargo.toml  README.md  build.rs  test.sh
tests/grpc/expected/: hello_reply.txt  ls.txt  multiple_ls.txt  no_reflection.txt  specific_type.txt
tests/grpc/src/: hotel_head.rs  test_grpc_multiple.rs  test_grpc_no_health.rs  test_grpc_no_reflection.rs  test_grpc_service.rs  test_grpc_traceable.rs
tests/health/: .Cargo.template.toml  Cargo.toml  README.md  build.rs  test.sh
tests/health/expected/: check.txt  watcher.txt
tests/health/src/: test_health_server.rs
tests/reflection/: .Cargo.template.toml  Cargo.toml  README.md  build.rs  test.sh
tests/reflection/expected/: ls.txt  service_method.txt
tests/reflection/proto/: hotel.proto
tests/reflection/src/: test_reflection_server.rs
