###############################################################################
#                                                                             #
# grpc_reflection/Cargo.toml                                                  #
#                                                                             #
# Handcrafted with love by MrBig Mobsters                                     #
# All rights reserved                                                         #
#                                                                             #
#                                                                             #
# Description: Cargo config for grpc reflection server.                       #
# See:         https://doc.rust-lang.org/cargo/reference/manifest.html        #
###############################################################################

[package]
name = "grpc_reflection"
version = "0.3.0"
authors = [
    "MrBig Mobsters <mobsters@mrbig.org>"
]
edition = "2018"
repository = "https://github.com/bobbie-ai/mrbig"
homepage = "https://github.com/bobbie-ai/mrbig"
documentation = "https://github.com/bobbie-ai/mrbig"
license = "MIT/Apache-2.0"
keywords = ["micro-services", "cloud-native"]
categories = ["system", "cloud-computing"]
description = "Just-on-Time Cloud-Native Application Crafting"

[lib]
name = "grpc_reflection"
path = "src/lib.rs"

[dependencies]
tonic = "0.3.1"
hyper = "0.13"
tower = "0.3.1"
bytes = "0.5"
prost = "0.6"
tokio = { version = "0.2", features = ["macros", "sync", "stream", "time"] }
async-stream = "0.2"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
base64 = "0.11"
log = "0.4.8"

[build-dependencies]
tonic-build = "0.3.1"
