###############################################################################
#                                                                             #
# grpc_reflection/Cargo.toml                                                  #
#                                                                             #
# Handcrafted with love by MrBig Mobsters                                     #
# All rights reserved                                                         #
#                                                                             #
#                                                                             #
# Description: Cargo config for grpc reflection server build code.            #
# See:         https://doc.rust-lang.org/cargo/reference/manifest.html        #
###############################################################################

[package]
name = "grpc_reflection_build"
version = "0.3.0"
authors = [
    "MrBig Mobsters <mobsters@mrbig.org>"
]
edition = "2018"
repository = "https://github.com/bobbie-ai/mrbig"
homepage = "https://github.com/bobbie-ai/mrbig"
documentation = "https://github.com/bobbie-ai/mrbig"
license = "MIT/Apache-2.0"
keywords = ["micro-services", "cloud-native"]
categories = ["system", "cloud-computing"]
description = "Just-on-Time Cloud-Native Application Crafting"

[lib]
name = "grpc_reflection_build"
path = "src/lib.rs"

[dependencies]
prost = "0.6"
tempfile = "3.1.0"
prost-types = "0.6"
prost-build = "0.6"
base64 = "0.11"
quote = "1.0.2"
syn = { version = "1.0.13", features = ["full"] }
