###############################################################################
#                                                                             #
# mrbig/hatch/Cargo.toml                                                      #
#                                                                             #
# Handcrafted with love by MrBig Mobsters                                     #
# All rights reserved                                                         #
#                                                                             #
# Description: Cargo script used to build the application state's serving     #
#              hatch (or synchronizer) between the local developer's platform #
#              and the remote cloud envrionment running Kubernetes.           #
# See:         https://doc.rust-lang.org/cargo/reference/manifest.html        #
###############################################################################

[package]
name = "mrbig-hatch"
version = "0.2.1"
edition = "2018"
readme = "README.md"
description = """
The hatch reflects modifications made on the application, on developer's local environment, to the
remote cloud-native platform running Kubernetes cluster.
"""

authors = [
    "The Mr. Big Mobsters <mobsters@mrbig.org>"
]

exclude = [
	".github/*",
	"examples/*",
	"tests/*",
	"benches/*",
	"*.png",
	"*.dot",
	"*.yml",
	"*.toml",
	"*.md",
]

include = [
  "src/**/*",
  "Cargo.toml",
  "README.md"
]

# Hatch server executable
[[bin]]
name = "mrbig-hatch"
path = "src/main.rs"

# Runtime dependencies
[dependencies]
anyhow = "1.0"
chrono = "0.4.10"
clap   = "2.33"
colored = "1.9.2"
config = { version = "0.10.1", default-features = false, features = ["toml"] }
env_logger = { version = "0.5.13", default-features = false }
human-panic = "1.0.1"
indicatif = "0.13.0"
log = "0.4.6"
structopt = "0.3"
thiserror = "1.0"
tokio = { version = "0.2", features = ["full"] }
tokio-util = { version = "0.2", features = ["full"] }

# Development dependencies
[dev-dependencies]
criterion = "0.3"
