###############################################################################
#                                                                             #
# tests/reflection/Cargo.toml                                                 #
#                                                                             #
# Handcrafted with love by MrBig Mobsters                                     #
# All rights reserved                                                         #
#                                                                             #
#                                                                             #
# Description: Cargo config for gRPC tests.                                   #
# See:         https://doc.rust-lang.org/cargo/reference/manifest.html        #
###############################################################################

[package]
name = "grpc-tests"
version = "0.3.0"
authors = [
    "MrBig Mobsters <mobsters@mrbig.org>"
]
edition = "2018"
repository = "https://github.com/bobbie-ai/mrbig"
homepage = "https://github.com/bobbie-ai/mrbig"
documentation = "https://github.com/bobbie-ai/mrbig"
license = "MIT/Apache-2.0"
keywords = ["micro-services", "cloud-native"]
categories = ["system", "cloud-computing"]
description = "Just-on-Time Cloud-Native Application Crafting"

[[bin]]
name = "test_grpc_service"
path = "src/test_grpc_service.rs"

[[bin]]
name = "test_grpc_no_reflection"
path = "src/test_grpc_no_reflection.rs"

[[bin]]
name = "test_grpc_multiple"
path = "src/test_grpc_multiple.rs"

[[bin]]
name = "test_grpc_no_health"
path = "src/test_grpc_no_health.rs"

[[bin]]
name = "test_grpc_traceable"
path = "src/test_grpc_traceable.rs"

[dependencies]
tonic = "0.3.1"
hyper = "0.13"
tower = "0.3.1"
bytes = "0.5"
prost = "0.6"
tokio = { version = "0.2", features = ["macros", "process", "rt-threaded"] }
mrbig_core = { path = "../../mrbig_core", features = ["traceable", "telemetry"] }
mrbig_derive = { path = "../../mrbig_derive" }
log = "0.4"

[build-dependencies]
mrbig_build = { path = "../../mrbig_build" }
