###############################################################################
#                                                                             #
# tests/health/Cargo.toml                                                     #
#                                                                             #
# Handcrafted with love by MrBig Mobsters                                     #
# All rights reserved                                                         #
#                                                                             #
#                                                                             #
# Description: Cargo config for health check tests.                           #
# See:         https://doc.rust-lang.org/cargo/reference/manifest.html        #
###############################################################################

[package]
name = "health-tests"
version = "0.3.0"
authors = [
    "MrBig Mobsters <mobsters@mrbig.org>"
]
edition = "2018"
repository = "https://github.com/bobbie-ai/mrbig"
homepage = "https://github.com/bobbie-ai/mrbig"
documentation = "https://github.com/bobbie-ai/mrbig"
license = "MIT/Apache-2.0"
keywords = ["micro-services", "cloud-native"]
categories = ["system", "cloud-computing"]
description = "Just-on-Time Cloud-Native Application Crafting"

[[bin]]
name = "test_health_server"
path = "src/test_health_server.rs"

[dependencies]
tonic = "0.3.1"
hyper = "0.13"
tower = "0.3.1"
bytes = "0.5"
prost = "0.6"
tokio = { version = "0.2", features = ["macros", "process", "rt-threaded"] }
futures = { version = "0.3", default-features = false, features = ["std", "alloc"] }
tonic-health = { version = "0.2.0" }

[build-dependencies]
tonic-build = "0.3.1"
