###############################################################################
#                                                                             #
# Cargo.toml                                                                  #
#                                                                             #
# Handcrafted with love by MrBig Mobsters                                     #
# All rights reserved                                                         #
#                                                                             #
#                                                                             #
# Description: Cargo config.                                                  #
# See:         https://doc.rust-lang.org/cargo/reference/manifest.html        #
###############################################################################

[package]
name = ""
version = "0.3.0"
authors = []
edition = "2018"

[[bin]]
name = ""
path = "src/main.rs"

[dependencies]
tonic = "0.3.1"
hyper = "0.13"
tower = "0.3.1"
bytes = "0.5"
prost = "0.6"
tokio = { version = "0.2", features = ["macros"] }
mrbig_core = { git = "https://github.com/bobbie-ai/mrbig" }
mrbig_derive = { git = "https://github.com/bobbie-ai/mrbig" }

[build-dependencies]
mrbig_build = { git = "https://github.com/bobbie-ai/mrbig" }
